--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,10 +7,23 @@
   display: flex;
 }
 
-.charts {
+.algorithms {
   display: flex;
   flex-wrap: wrap;
   column-gap: 50px;
+
+  & .algorithm {
+    & .header {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+
+      &:has(.placing)~.recharts-wrapper {
+        background-color: honeydew;
+      }
+    }
+  }
 }
 
 .controlButtons {
