--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,23 +26,38 @@
   }
 }
 
-.controlButtons {
-  button {
-    height: 25px;
+.controls {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
 
-    &:disabled {
+  & .buttons {
+    button {
+      height: 25px;
+
+      &:disabled {
+        img {
+          filter: opacity(25%);
+        }
+      }
+
+      &.hidden {
+        display: none;
+      }
+
       img {
-        filter: opacity(25%);
+        width: 100%;
+        height: 100%;
       }
     }
+  }
 
-    &.hidden {
-      display: none;
-    }
-
-    img {
-      width: 100%;
-      height: 100%;
-    }
+  & .slider {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
   }
 }
