--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,63 +1,129 @@
-.sliders {
-  display: flex;
-  align-items: flex-start;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
 }
 
-.checkboxes {
-  display: flex;
+html {
+  font-size: 16px;
+  height: 100%;
 }
 
-.algorithms {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 50px;
+#root {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: clamp(300px, 20vw, 450px) 1fr;
+  grid-template-rows: 50px 1fr;
+  grid-template-areas:
+    "header header"
+    "aside main"
+    "footer footer";
+}
 
-  & .algorithm {
-    & .header {
+header {
+  grid-area: header;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+aside {
+  grid-area: aside;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+
+  .section {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
+
+    .header {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
+    }
 
-      &:has(.placing)~.recharts-wrapper {
-        background-color: honeydew;
+    .items {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
+  }
+}
+
+main {
+  grid-area: main;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+  #visualisation-controls {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    .items {
+      button {
+        height: 25px;
+
+        &:disabled {
+          img {
+            filter: opacity(25%);
+          }
+        }
+
+        &.hidden {
+          display: none;
+        }
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
+
+  #visualisation-display {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 50px;
+
+    .item {
+      .header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        &:has(.placing)~.recharts-wrapper {
+          background-color: honeydew;
+        }
       }
     }
   }
 }
 
-.controls {
+footer {
+  grid-area: footer;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.slider {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  gap: 20px;
-
-  & .buttons {
-    button {
-      height: 25px;
-
-      &:disabled {
-        img {
-          filter: opacity(25%);
-        }
-      }
-
-      &.hidden {
-        display: none;
-      }
-
-      img {
-        width: 100%;
-        height: 100%;
-      }
-    }
-  }
-
-  & .slider {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-  }
 }
