--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -109,6 +109,11 @@ main {
           background-color: honeydew;
         }
       }
+
+      .chart {
+        width: 300px;
+        height: 250px;
+      }
     }
   }
 }
