--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -63,7 +63,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: stretch;
 
   #visualisation-controls {
     display: flex;
@@ -94,25 +94,32 @@ main {
   }
 
   #visualisation-display {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 50px;
+    display: grid;
+    flex-grow: 1;
+    gap: 20px;
+    padding: 20px;
+    grid-auto-columns: 1fr;
+    grid-auto-rows: 1fr;
 
     .item {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: stretch;
+
       .header {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
 
-        &:has(.placing)~.recharts-wrapper {
+        &:has(.placing)~.chart .recharts-wrapper {
           background-color: honeydew;
         }
       }
 
       .chart {
-        width: 300px;
-        height: 250px;
+        flex-grow: 1;
       }
     }
   }
