Change finished algorithm highlighting from background to chart fill

--- a/src/components/Main/VisualisationDisplay.css
+++ b/src/components/Main/VisualisationDisplay.css
@@ -18,9 +18,9 @@
       justify-content: space-between;
       align-items: center;
 
-      &:has(.placing)~.chart .recharts-wrapper {
+      /* &:has(.placing)~.chart .recharts-wrapper {
         background-color: honeydew;
-      }
+      } */
     }
 
     .chart {
