--- a/src/components/Slider/index.css
+++ b/src/components/Slider/index.css
@@ -1,6 +1,15 @@
 .slider {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
+  gap: 20px;
+
+  div {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 5px;
+  }
 }
