Add test colours to sections

--- a/src/components/Aside/index.css
+++ b/src/components/Aside/index.css
@@ -4,6 +4,7 @@ aside {
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
+  background-color: aliceblue;
 
   .section {
     display: flex;
