--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -4,6 +4,7 @@ footer {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  background-color: cornflowerblue;
 
   & img {
     height: 1rem;
