--- a/src/components/Main/VisualisationControls.css
+++ b/src/components/Main/VisualisationControls.css
@@ -1,39 +1,56 @@
 #visualisation-controls {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-areas: ". controls info";
 
-  .items {
+  .controls {
+    grid-area: controls;
     display: flex;
-    flex-direction: row;
-    justify-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
-    gap: 3px;
 
-    button {
-      height: 45px;
+    .buttons {
+      display: flex;
+      flex-direction: row;
+      justify-items: center;
+      align-items: center;
+      gap: 3px;
 
-      &#playButton,
-      &#pauseButton,
-      &#stopButton {
-        height: 55px;
-      }
+      button {
+        height: 45px;
 
-      &:disabled {
+        &#playButton,
+        &#pauseButton,
+        &#stopButton {
+          height: 55px;
+        }
+
+        &:disabled {
+          img {
+            filter: opacity(25%);
+          }
+        }
+
+        &.hidden {
+          display: none;
+        }
+
         img {
-          filter: opacity(25%);
+          width: 100%;
+          height: 100%;
         }
       }
-
-      &.hidden {
-        display: none;
-      }
-
-      img {
-        width: 100%;
-        height: 100%;
-      }
     }
+  }
+
+  .info {
+    justify-self: end;
+    grid-area: info;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
   }
 }
