--- a/src/components/Main/VisualisationDisplay.css
+++ b/src/components/Main/VisualisationDisplay.css
@@ -1,7 +1,8 @@
 #visualisation-display {
   display: grid;
   flex-grow: 1;
-  gap: 20px;
+  row-gap: 20px;
+  column-gap: 50px;
   padding: 20px;
   grid-auto-columns: 1fr;
   grid-auto-rows: 1fr;
