--- a/src/components/Aside/index.css
+++ b/src/components/Aside/index.css
@@ -23,7 +23,20 @@ aside {
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      align-items: stretch;
+      align-items: flex-start;
+
+      .slider {
+        flex-direction: column;
+        align-items: stretch;
+        gap: 0;
+
+        .display {
+          input {
+            flex-grow: 1;
+          }
+        }
+
+      }
     }
   }
 }
