--- a/src/components/Aside/index.css
+++ b/src/components/Aside/index.css
@@ -1,16 +1,25 @@
 aside {
   grid-area: aside;
+
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
+  gap: 16px;
+
   background-color: aliceblue;
+  padding: 15px 15px;
+
+  >.title {
+    font-size: 1.6rem;
+  }
 
   .section {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: stretch;
+    gap: 4px;
 
     .header {
       display: flex;
@@ -35,11 +44,21 @@ aside {
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
+      gap: 4px;
+
+      input[type="radio"],
+      input[type="checkbox"] {
+        margin-right: 4px;
+      }
+
+      &:has(.slider) {
+        gap: 10px;
+      }
 
       .slider {
         flex-direction: column;
         align-items: stretch;
-        gap: 0;
+        gap: 2px;
 
         .display {
           input {
