--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,8 +1,15 @@
 header {
   grid-area: header;
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+
   background-color: cornflowerblue;
+  padding: 15px 15px;
+
+  .title {
+    font-size: 2.2rem;
+  }
 }
