--- a/src/components/Main/index.css
+++ b/src/components/Main/index.css
@@ -1,8 +1,12 @@
 main {
   grid-area: main;
+
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
+  gap: 30px;
+
   background-color: white;
+  padding: 15px 25px;
 }
