--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,13 +3,7 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
-  font-family: 'Lucida Sans',
-    'Lucida Sans Regular',
-    'Lucida Grande',
-    'Lucida Sans Unicode',
-    Geneva,
-    Verdana,
-    sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
 
   a {
     color: black;
