--- a/src/components/Aside/index.css
+++ b/src/components/Aside/index.css
@@ -5,13 +5,14 @@ aside {
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
-  gap: 16px;
+  gap: 20px;
 
   background-color: aliceblue;
   padding: 15px 15px;
 
   >.title {
     font-size: 1.6rem;
+    margin-bottom: -8px;
   }
 
   .section {
