--- a/src/components/Aside/index.css
+++ b/src/components/Aside/index.css
@@ -7,7 +7,7 @@ aside {
   align-items: stretch;
   gap: 20px;
 
-  background-color: aliceblue;
+  background-color: #e0f2fe;
   padding: 15px 15px;
 
   >.title {
@@ -35,14 +35,26 @@ aside {
 
       button {
         font-size: 0.85rem;
-        padding: 4px 6px;
-        border: 1px solid black;
-        border-radius: 4px;
+        padding: 5px 6px;
         /* flex-basis: 0; */
         flex-shrink: 0;
 
+        /* border: 1px solid black;
+        background-color: white;
+        color: black; */
+        border: none;
+        border-radius: 0;
+        background-color: #075985;
+        color: white;
+
         &:hover {
-          cursor: pointer;
+          background-color: #0c4a6e;
+        }
+
+        &:disabled {
+          color: #94a3b8;
+          background-color: #e2e8f0;
+          border-color: #94a3b8;
         }
       }
     }
