--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -6,12 +6,25 @@ footer {
   justify-content: center;
   align-items: flex-start;
 
-  background-color: cornflowerblue;
+  background-color: #075985;
   padding: 7px 0 3px;
   font-size: 0.9rem;
 
+  pre,
+  a {
+    color: #f0f9ff;
+  }
+
+  a {
+    text-decoration: underline;
+
+    &:hover {
+      color: #cbd5e1;
+    }
+  }
+
   & img {
     height: 1rem;
-    filter: invert(80%) sepia(38%) saturate(1%) hue-rotate(6deg) brightness(103%) contrast(92%);
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(305deg) brightness(102%) contrast(102%);
   }
 }
