--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -6,10 +6,14 @@ header {
   justify-content: space-between;
   align-items: center;
 
-  background-color: cornflowerblue;
+  background-color: #075985;
   padding: 15px 15px;
 
   .title {
     font-size: 2.2rem;
+
+    a {
+      color: white;
+    }
   }
 }
