--- a/src/components/Main/VisualisationControls.css
+++ b/src/components/Main/VisualisationControls.css
@@ -20,12 +20,33 @@
       gap: 3px;
 
       button {
-        height: 45px;
+        height: 2.2rem;
+        padding: 3px;
+        border-radius: 0;
+        border: none;
+        background-color: #0c4a6e;
+        color: white;
+
+        &:hover {
+          background-color: #082f49;
+        }
+
+        &:disabled {
+          color: #94a3b8;
+          background-color: #e2e8f0;
+          border-color: #94a3b8;
+        }
+
+        img {
+          width: 100%;
+          height: 100%;
+          filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(305deg) brightness(102%) contrast(102%);
+        }
 
         &#playButton,
         &#pauseButton,
         &#stopButton {
-          height: 55px;
+          height: 3rem;
         }
 
         &:disabled {
@@ -36,11 +57,6 @@
 
         &.hidden {
           display: none;
-        }
-
-        img {
-          width: 100%;
-          height: 100%;
         }
       }
     }
