--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -6,25 +6,26 @@ footer {
   justify-content: center;
   align-items: flex-start;
 
-  background-color: #075985;
+  background-color: var(--dark-background);
   padding: 7px 0 3px;
   font-size: 0.9rem;
 
   pre,
   a {
-    color: #f0f9ff;
+    color: var(--light-text);
   }
 
   a {
     text-decoration: underline;
 
     &:hover {
-      color: #cbd5e1;
+      color: var(--light-text-hover);
     }
   }
 
   & img {
     height: 1rem;
+    /* white filter */
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(305deg) brightness(102%) contrast(102%);
   }
 }
