--- a/src/components/Main/VisualisationControls.css
+++ b/src/components/Main/VisualisationControls.css
@@ -22,24 +22,23 @@
       button {
         height: 2.2rem;
         padding: 3px;
-        border-radius: 0;
         border: none;
-        background-color: #0c4a6e;
-        color: white;
+        border-radius: 0;
+
+        background-color: var(--control-button-background);
 
         &:hover {
-          background-color: #082f49;
+          background-color: var(--control-button-hover);
         }
 
         &:disabled {
-          color: #94a3b8;
-          background-color: #e2e8f0;
-          border-color: #94a3b8;
+          background-color: var(--button-disabled-background);
         }
 
         img {
           width: 100%;
           height: 100%;
+          /* white filter */
           filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(305deg) brightness(102%) contrast(102%);
         }
 
