--- a/src/components/Main/VisualisationDisplay.css
+++ b/src/components/Main/VisualisationDisplay.css
@@ -17,7 +17,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-end;
 
       .placing {
         font-size: 1.1rem;
