--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,13 @@ input[type='range'] {
     display: block;
     transform: translate(-50%, 110%) scale(1);
   }
+
+  @media only screen and (max-width: 768px) {
+    &::after {
+      width: min-content;
+      text-wrap: wrap;
+    }
+  }
 }
 
 #root {
@@ -139,4 +146,11 @@ input[type='range'] {
     "header header"
     "aside main"
     "footer footer";
+
+  @media only screen and (max-width: 768px) {
+    grid-template-columns: 1fr;
+    grid-template-areas: 'header'
+      'main'
+      'footer';
+  }
 }
