--- a/src/components/Main/VisualisationControls.css
+++ b/src/components/Main/VisualisationControls.css
@@ -70,6 +70,11 @@
           flex-grow: 1;
         }
       }
+
+      @media only screen and (max-width: 768px) {
+        /* display: none; */
+        font-size: 0.95rem;
+      }
     }
   }
 
@@ -83,5 +88,14 @@
     align-items: flex-end;
 
     font-size: 0.95rem;
+
+    @media only screen and (max-width: 768px) {
+      display: none;
+    }
+  }
+
+  @media only screen and (max-width: 768px) {
+    grid-template-columns: 1fr;
+    grid-template-areas: "controls";
   }
 }
