--- a/src/components/Main/VisualisationDisplay.css
+++ b/src/components/Main/VisualisationDisplay.css
@@ -41,4 +41,9 @@
       flex-grow: 1;
     }
   }
+
+  @media only screen and (max-width: 768px) {
+    row-gap: 15px;
+    column-gap: 25px;
+  }
 }
