--- a/src/components/Aside/index.css
+++ b/src/components/Aside/index.css
@@ -86,8 +86,12 @@ aside {
       }
     }
   }
+}
 
-  @media only screen and (max-width: 768px) {
-    display: none;
+@media only screen and (max-width: 768px) {
+  html:has(.menuClosed) {
+    aside {
+      display: none;
+    }
   }
 }
