--- a/src/components/Main/index.css
+++ b/src/components/Main/index.css
@@ -10,3 +10,11 @@ main {
   background-color: var(--light-background);
   padding: 15px 25px 25px;
 }
+
+@media only screen and (max-width: 768px) {
+  html:has(.menuOpen) {
+    main {
+      display: none;
+    }
+  }
+}
