--- a/src/App.css
+++ b/src/App.css
@@ -137,8 +137,9 @@ input[type='range'] {
 
   @media only screen and (max-width: 768px) {
     &::after {
-      width: min-content;
-      text-wrap: wrap;
+      /* width: min-content;
+      text-wrap: wrap; */
+      content: normal;
     }
   }
 }
