Adjust position of dark mode button image in mobile mode

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -40,7 +40,7 @@ header {
       background-color: transparent;
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
 
       &#high-contrast-mode-button {
@@ -136,6 +136,7 @@ header {
 
     #dark-mode-button {
       display: none;
+      margin-top: 3px;
     }
 
     @media only screen and (max-width: 768px) {
