--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -139,7 +139,13 @@ header {
       margin-top: 3px;
     }
 
+    #menu-button {
+      display: none;
+    }
+
     @media only screen and (max-width: 768px) {
+      gap: 20px;
+
       #dark-mode-switch {
         display: none;
       }
@@ -148,7 +154,9 @@ header {
         display: inline-block;
       }
 
-      gap: 20px;
+      #menu-button {
+        display: inline-block;
+      }
     }
   }
 }
