Disable button hover colour change on mobile

--- a/src/components/Aside/index.css
+++ b/src/components/Aside/index.css
@@ -45,7 +45,9 @@ aside {
         color: var(--button-text);
 
         &:hover {
-          background-color: var(--button-hover);
+          @media only screen and not (max-width: 768px) {
+            background-color: var(--button-hover);
+          }
         }
 
         &:disabled {
