--- a/src/components/Main/index.css
+++ b/src/components/Main/index.css
@@ -12,7 +12,7 @@ main {
 }
 
 @media only screen and (max-width: 768px) {
-  html:has(.menuOpen) {
+  html:has(.menu-open) {
     main {
       display: none;
     }
